@@ -2,6 +2,10 @@
         - Finished porting Marker View. (Orcan)
         - Ported ctrlpanel. Needs some testing. I also removed usage of the Oxygen's "pen" icon
           in place of the pencil. The pen looks bad in ctrlpanel. (Orcan)
+        - Deicsonze2 added (!!) Fresh re-import from evolution. Test OK. (Tim)
+          TODO: Plugin controllers disabled - we need the Ctrl class. 
+                Restoring of state (that's a MusE problem I think).   
+                Fix deicsonze.cpp:3612: warning: deprecated conversion from string constant to ‘char*’
 27.11.2010
         - Completed porting pianoroll module including menus, shortcuts. Should be done. (Tim)
         - Ported the following .ui widgets to Qt4: organguibase, gatetime, midisync,
